Campaign search and performance analyser updates

--- a/pages/CampaignSearch.mdx
+++ b/pages/CampaignSearch.mdx
@@ -1,5 +1,128 @@
-### Introduction
+# Campaign Search Documentation
 
-Search, filter and access historical campaigns. 
+## 1. Getting Started
 
-**Coming soon**
+#### Logging in and finding Campaign Search
+
+Campaign Search is situated within the Ibex 2.0 Dashboard, meaning you will need to log in using your Okta credentials to access the platform.
+
+Once logged in, head to the dashboard to find Campaign Search towards the bottom of the page.
+
+![image.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/75ca5938-947a-405e-9e18-2e766f2eaf8b)
+
+#### What is Campaign Search?
+
+Campaign Search is your main access point for viewing all current and past campaigns that have been imported from campaign sheets.
+
+Many of you will have used the original Ibex platform, and may remember that a campaign search existed on that platform as well. The new Campaign Search acts as a successor to the original design, adding usability and experience improvements, as well as increased functionality.
+
+---
+
+
+## 2. Exploring Campaigns
+
+#### Navigating the table and sidebar
+
+The campaign table displays key information about all current and past campaigns within Ibex. The table is sorted by default with the newest campaigns at the top.
+
+The table scrolls infinitely, so more campaigns will continue to appear as you scroll down. You can see the total number of results at the bottom left of the table area.
+
+Clicking on one of the table rows opens the sidebar, where you can find further details about the campaign, and a breakdown of the budget split, activations, and channels.
+
+![sidebars.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/97aaf6eb-bb84-40be-88be-033fbc0f6f08)
+
+> The Overview, Activations and Channels sections of the sidebar
+
+> #### Data Availability
+
+> All of the data used within this feature has been taken from the campaign sheets, so most of it should be familiar to you. This includes the lists and categories available within filters, such as the product categories, product type, and Verticals.
+
+> Some fields in the table and sidebar will be blank or displayed as unavailable. This is where data has either not been input into the campaign sheets, has failed to import due to a validation error or is planned to be updated and imported with future revisions of the campaign data, sheet importer or the new campaign setup process.
+
+#### Using the search bar
+
+The search bar lives above the campaign table and can be used in a couple of different ways:
+
+   1. Search for any non-numerical data e.g. brand, campaign name, territory, objective, vertical etc.
+   2. Search for a specific creator; this can be done using either the creator channel handle, the creator display name (eg Wendy Barker), or the creator's email address.
+
+The search bar is most effective when used to quickly search for something specific (campaign name, campaign code, brand, or anything unique). For broader categories (beauty, brand awareness), it will not be as accurate as using the filtering system, as some terminology lives within multiple categories (e.g., beauty lives within verticals and product categories).
+
+#### Filtering and sorting
+
+Many of the table columns have a sort function, denoted by the chevron icon to the right of a column header. By default, the table is sorted by date, most recent first.
+
+The filters can be accessed by pressing the filter button, to the right of the search bar. There are 11 filter groups, most of which contain 1 to 2 filters and an AND/OR toggle.
+
+![Screenshot 2025-03-19 at 16.07.49.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/2beb42a3-827e-4e1f-847e-114762565ebb)
+
+   > Access the 11 filter groups within the sidebar by using the filter button highlighted in blue.
+
+You will see the table change dynamically as you apply filters within the sidebar.
+
+By default, within each filter section the AND/OR toggle is set to AND, meaning the results surfaced in the table will be a match for every filter you have applied.
+
+![image.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/a631260b-0e56-42b7-b93e-5ee17b49be3c)
+
+   > A filter block with the AND/OR toggle at it's default position
+
+Keep in mind that each filter applied can significantly reduce the amount of results surfaced, when AND is applied.
+
+If you wish to perform a broader search, where campaigns returned can be a partial match, you can set the toggle to OR for the variables you wish this to apply to.
+
+---
+
+## 4. User Feedback Process
+
+#### How to submit feedback
+
+There are three ways to submit feedback:
+
+   - For general feedback and enquiries, email *ibex.support@goatagency.com* or use our [ibex-support slack channel](https://thegoatagency.slack.com/archives/C089WQJ69LM)
+   - [Bug Report Form](https://forms.clickup.com/2641216/f/2gka0-48912/POFFP0OUCEF62VAPII) - for when you've encountered any bugs, or something's not working as expected
+   - [Product Feature Request Form](https://forms.clickup.com/2641216/f/2gka0-48232/C3VGG0FH9I7IBUK4W6) - for new feature requests and suggestions on how to improve the platform
+
+#### Types of feedback that are most helpful
+
+- Giving a detailed description of the issue you faced, specifying where and how it happened, what device and browser you were using, and include steps to reproduce the error if possible. Include screenshots, sketches or supporting documentation where possible.
+- Reporting when data seems inaccurate, either within the campaign table or the sidebar (use the [Bug Report Form](https://forms.clickup.com/2641216/f/2gka0-48912/POFFP0OUCEF62VAPII))
+- Highlighting any features or areas of the platform that are creating friction within your working process.
+- A detailed explanation of a feature or update that will positively impact the team or improve the workflow/lifecycle of campaign strategy, planning, delivery and reporting.
+- New ideas or processes that are currently carried out by the team but could be improved through an addition or update to the
+- How feedback is processed
+- Timeline for response/implementation
+- How to report bugs vs. suggest improvements
+
+---
+
+## 5. Future Development Roadmap
+
+#### Planned enhancements
+
+- Display of campaign sheet import errors
+- Button to reimport campaign sheet data
+- Refinement of filter dropdown items
+- Information description tooltips for filters
+
+#### Feature prioritisation process
+
+1. All bugs and feature requests are sent directly to the development and product team
+2. Urgent fixes are actioned as soon as possible
+3. All other feedback and bugs are reviewed weekly
+4. Updates and fixes are published and sent out in the Ibex newsletter
+
+#### How user feedback influences the roadmap
+
+All submissions and suggestions can impact the prioritisation and direction of the roadmap. We encourage everyone to submit their frustrations, issues, and ideas. We live for this kind of feedback to ensure we can give you the best possible experience, so don't be shy. If the same or similar issue occurs frequently and from many users, this will increase the likelihood of prioritising what is planned to be worked on in the next phase of work.
+
+While every effort will be made to consider, explore, and respond to suggestions, we are a small team working on updates, bugs, data, QA, integrations and new product development, so we will be limited in what we can do. If it is urgent or a feature that will make a real impact, please submit the idea and contact us to discuss it further.
+
+---
+
+## 6. FAQ & Troubleshooting
+
+- Common questions and answers
+- Troubleshooting common issues
+- Performance optimisation tips
+- Known limitations and workarounds
+
