--- a/pages/PerformanceAnalyser.mdx
+++ b/pages/PerformanceAnalyser.mdx
@@ -25,7 +25,7 @@ The Performance Analyser is a tool designed to provide campaign insights for a c
 
 ### **2\. Getting Started**
 
-Log into IBEX using your Okta credentials. Once you're logged in, click on the "Performance Analyser" card within the dashboard.
+Once you're logged in, click on the "Performance Analyser" card within the dashboard.
 
   
 
@@ -173,8 +173,22 @@ This feature allows you to create custom graphs to compare different metrics, su
 **Client Communication:** Be mindful of what information is shared with clients, especially in an undisclosed model where all data is based on internal costings without the correct margin applied. Always ensure the appropriate margin is applied before sharing costing data with clients.
 
   
+### **5\. Exporting charts and graphs**
+In order to export the charts and graphs from the performance analyser there are two requirements. A chrome extension that enables you to copy the SVG image of the chart and a design program to edit it. Our reccomendation is to use Figma as it makes it retains the proportions of the graph better than Adobe. 
 
-### **5\. Troubleshooting & FAQs**
+#### **Where to get the apps**
+You can download Figma from Kandji that should be available from your computer  
+The chrome extension required is <a href=https://chromewebstore.google.com/detail/SVG%202%20Clipboard/pacmblooebolmbakblffejfmhmnojece target=_Blank>'SVG to clipboard'</a>
+
+Once you have these downlaoded and installed, navigate to the performance analyser and to the campaign or view you want the charts from.
+
+Make sure the extension is active and on the chart right click and select 'Copy SVG (element)'. This will copy the chart to your clipboard.  
+
+In Figma create a new design document and paste the chart into the document. You now have a copy of your chart that can be edited. Some of the formatting will look a little odd but there are a few simple steps to resolve this outlined in the followign video,
+
+**Video coming soon**
+
+### **6\. Troubleshooting & FAQs**
 
 **Q: Why is the data not updating after I select a brand and campaign?**
 
@@ -198,6 +212,4 @@ Plans are in place to create a client portal where clients can log in and access
 
   
 
-The Performance Analyser is client-focused, while the benchmark analysis provides industry-wide data over time. Using both together can provide powerful insights into how a brand is performing
-
-against industry standards.
+The Performance Analyser is client-focused but internal facing for now, while the benchmark analysis provides industry-wide data over time. Using both together can provide powerful insights into how a brand is performing against industry standards.
