removed link to check error

--- a/pages/PerformanceAnalyser.mdx
+++ b/pages/PerformanceAnalyser.mdx
@@ -27,7 +27,6 @@ The Performance Analyser is a tool designed to provide campaign insights for a c
 
 Once you're logged in, click on the "Performance Analyser" card within the dashboard.
 
-  
 
 **Basic Workflow:**
 
@@ -178,7 +177,7 @@ In order to export the charts and graphs from the performance analyser there are
 
 #### **Where to get the apps**
 You can download Figma from Kandji that should be available from your computer  
-The chrome extension required is <a href=https://chromewebstore.google.com/detail/SVG%202%20Clipboard/pacmblooebolmbakblffejfmhmnojece target=_Blank>'SVG to clipboard'</a>
+The chrome extension required is
 
 Once you have these downlaoded and installed, navigate to the performance analyser and to the campaign or view you want the charts from.
 
