Add forms to introduction page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -33,9 +33,21 @@ Once logged in, you'll see the main dashboard - your central hub for all applica
 
 ### Feedback and Improvements
 We continuously develop and enhance our applications based on your needs. Share your ideas through:
-- [Submit Feedback via Google Forms](https://docs.google.com/forms/d/e/1FAIpQLSeZ30gytgw7IVnvFDesDDDmNxuwTYNPoAl8KaZG3Vzwz2FeKg/viewform)
 - Direct communication with your team lead
 - Via the slack channel above
+- Using the forms available below
+
+### Report a bug in the system
+<iframe class="clickup-embed clickup-dynamic-height" src="https://forms.clickup.com/2641216/f/2gka0-50832/I0215TK4FVKHFKN5VE" onwheel="" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe><script async src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"></script>
+
+### Feedback, Product requests, & Updates 
+<iframe class="clickup-embed clickup-dynamic-height" src="https://forms.clickup.com/2641216/f/2gka0-48232/C3VGG0FH9I7IBUK4W6" onwheel="" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe><script async src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"></script>
+
+### Request a new user to be added to the system
+<iframe class="clickup-embed clickup-dynamic-height" src="https://forms.clickup.com/2641216/f/2gka0-49832/PS30WJWPKI4QRPX59R" onwheel="" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe><script async src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"></script>
+
+
+
 
 Whether you've spotted a small bug or have a major feature request, we welcome all feedback to help improve the platform.
 
