--- a/pages/CampaignSearch.mdx
+++ b/pages/CampaignSearch.mdx
@@ -8,15 +8,28 @@ Campaign Search is situated within the Ibex 2.0 Dashboard, meaning you will need
 
 Once logged in, head to the dashboard to find Campaign Search towards the bottom of the page.
 
-![image.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/75ca5938-947a-405e-9e18-2e766f2eaf8b)
+![image.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/app-dashboard_h4dl65.png)
 
 #### What is Campaign Search?
 
 Campaign Search is your main access point for viewing all current and past campaigns that have been imported from campaign sheets.
 
-Many of you will have used the original Ibex platform, and may remember that a campaign search existed on that platform as well. The new Campaign Search acts as a successor to the original design, adding usability and experience improvements, as well as increased functionality.
+Many of you will have used the original Ibex platform, and may remember the previous version. The new Campaign Search acts as a successor to the original, adding usability and experience improvements, as well as increased functionality.
 
----
+#### What to use it for? 
+
+Use it to answer questions, get top level campaign information and direct links to the campaign sheet. Below are some examples of questions we have seeen in slack etc:
+
+- What campaigns have we delivered for [Insert brand]?  
+- What campaigns have we worked on in [insert vertical]?  
+- Which brands and campaigns have we executed in [insert territory]?  
+- What creators did we collaborate with on [insert campaign name or ID]?  
+- What brands and campaigns have we run within [insert product category]?  
+- How many campaigns have we conducted between [date] and [date]?
+
+
+All of the above can be answered quickly and easily using the available search box or via the filters.
+
 
 
 ## 2. Exploring Campaigns
@@ -29,14 +42,14 @@ The table scrolls infinitely, so more campaigns will continue to appear as you s
 
 Clicking on one of the table rows opens the sidebar, where you can find further details about the campaign, and a breakdown of the budget split, activations, and channels.
 
-![sidebars.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/97aaf6eb-bb84-40be-88be-033fbc0f6f08)
+![sidebars.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/sidebars_e5kp2b.png)
 
-> The Overview, Activations and Channels sections of the sidebar
+The Overview, Activations and Channels sections of the sidebar
 
-> #### Data Availability
+#### Data Availability
 
-> All of the data used within this feature has been taken from the campaign sheets, so most of it should be familiar to you. This includes the lists and categories available within filters, such as the product categories, product type, and Verticals.
-
+> All of the data used within this feature has been taken from the campaign sheets, so most of it should be familiar to you. This includes the lists and categories available within filters, such as the product categories, product type, and Verticals.  
+>
 > Some fields in the table and sidebar will be blank or displayed as unavailable. This is where data has either not been input into the campaign sheets, has failed to import due to a validation error or is planned to be updated and imported with future revisions of the campaign data, sheet importer or the new campaign setup process.
 
 #### Using the search bar
@@ -54,7 +67,7 @@ Many of the table columns have a sort function, denoted by the chevron icon to t
 
 The filters can be accessed by pressing the filter button, to the right of the search bar. There are 11 filter groups, most of which contain 1 to 2 filters and an AND/OR toggle.
 
-![Screenshot 2025-03-19 at 16.07.49.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/2beb42a3-827e-4e1f-847e-114762565ebb)
+![Screenshot 2025-03-19 at 16.07.49.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/campaign-search_pk4ti7.png)
 
    > Access the 11 filter groups within the sidebar by using the filter button highlighted in blue.
 
@@ -62,7 +75,7 @@ You will see the table change dynamically as you apply filters within the sideba
 
 By default, within each filter section the AND/OR toggle is set to AND, meaning the results surfaced in the table will be a match for every filter you have applied.
 
-![image.png](https://res.craft.do/user/full/22ebec73-59be-d62c-965d-05b99b6f49f9/doc/ff9a6ac1-3c56-4678-97a3-d3058b122d9b/a631260b-0e56-42b7-b93e-5ee17b49be3c)
+![image.png](https://res.cloudinary.com/goatagency/image/upload/v1743091476/Ibex%20Docs/campaign-search-filter_gtu0bx.png)
 
    > A filter block with the AND/OR toggle at it's default position
 
@@ -99,30 +112,33 @@ There are three ways to submit feedback:
 
 #### Planned enhancements
 
-- Display of campaign sheet import errors
-- Button to reimport campaign sheet data
-- Refinement of filter dropdown items
-- Information description tooltips for filters
+- Display campaign sheet import errors
+- Button for reimporting campaign sheet data
+- Refinement of filter dropdown options 
+- Information tooltips for filter descriptions
 
 #### Feature prioritisation process
 
-1. All bugs and feature requests are sent directly to the development and product team
-2. Urgent fixes are actioned as soon as possible
-3. All other feedback and bugs are reviewed weekly
-4. Updates and fixes are published and sent out in the Ibex newsletter
+ <ol>
+    <li>All bugs and feature requests are sent directly to the development and product team</li>
+    <li>Urgent fixes are actioned as soon as possible</li>
+    <li>All other feedback and bugs are reviewed bi-weekly</li>
+    <li>Updates and fixes are published and sent out in the Ibex newsletter</li>
+ </ol>
+
 
 #### How user feedback influences the roadmap
 
-All submissions and suggestions can impact the prioritisation and direction of the roadmap. We encourage everyone to submit their frustrations, issues, and ideas. We live for this kind of feedback to ensure we can give you the best possible experience, so don't be shy. If the same or similar issue occurs frequently and from many users, this will increase the likelihood of prioritising what is planned to be worked on in the next phase of work.
+All submissions and suggestions can influence the prioritisation and direction of the roadmap. We encourage everyone to share their frustrations, issues, and ideas. We thrive on this kind of feedback to ensure we provide you with the best possible experience. If the same or a similar issue arises frequently among many users, this will enhance the likelihood of prioritising topics planned for the next phase of work.
 
-While every effort will be made to consider, explore, and respond to suggestions, we are a small team working on updates, bugs, data, QA, integrations and new product development, so we will be limited in what we can do. If it is urgent or a feature that will make a real impact, please submit the idea and contact us to discuss it further.
+While we will make every effort to consider, explore, and respond to suggestions, our small team works on updates, bugs, data, QA, integrations, and new product development, which means our capabilities are limited. If your suggestion is urgent or presents a significant impact, please submit the idea and contact us to discuss it further.
 
 ---
 
 ## 6. FAQ & Troubleshooting
 
-- Common questions and answers
-- Troubleshooting common issues
-- Performance optimisation tips
-- Known limitations and workarounds
+- Frequently asked questions and answers
+- Solutions for common issues
+- Tips for optimising performance 
+- Known limitations and possible workarounds
 
