--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -37,17 +37,13 @@ We continuously develop and enhance our applications based on your needs. Share 
 - Via the slack channel above
 - Using the forms available below
 
-### Report a bug in the system
-<iframe class="clickup-embed clickup-dynamic-height" src="https://forms.clickup.com/2641216/f/2gka0-50832/I0215TK4FVKHFKN5VE" onwheel="" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe><script async src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"></script>
+Whether you've spotted a small bug or have a major feature request, we welcome all feedback to help improve the platform.
 
-### Feedback, Product requests, & Updates 
-<iframe class="clickup-embed clickup-dynamic-height" src="https://forms.clickup.com/2641216/f/2gka0-48232/C3VGG0FH9I7IBUK4W6" onwheel="" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe><script async src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"></script>
+[Report a bug in the system](https://forms.clickup.com/2641216/f/2gka0-50832/I0215TK4FVKHFKN5VE)
 
-### Request a new user to be added to the system
-<iframe class="clickup-embed clickup-dynamic-height" src="https://forms.clickup.com/2641216/f/2gka0-49832/PS30WJWPKI4QRPX59R" onwheel="" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe><script async src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"></script>
+[Feedback, Product requests, & Updates](https://forms.clickup.com/2641216/f/2gka0-48232/C3VGG0FH9I7IBUK4W6)
 
-
-
+[Request a new user to be added to the system](https://forms.clickup.com/2641216/f/2gka0-49832/PS30WJWPKI4QRPX59R)
 
 Whether you've spotted a small bug or have a major feature request, we welcome all feedback to help improve the platform.
 
