form embed and formatting updates to campaign search

--- a/pages/PerformanceAnalyser.mdx
+++ b/pages/PerformanceAnalyser.mdx
@@ -1,5 +1,7 @@
+import { Callout } from 'nextra/components'
 
-### **1\. Introduction**
+
+### 1\. Introduction
 
 The Performance Analyser is a tool designed to provide campaign insights for a campaign or brand across both organic and paid channels. It allows users to analyse influencer performance, CPMs, CPAs, engagement rates, and other key metrics. While initially conceived as a PCA data visualisation tool, its capabilities extend far beyond that.
 
@@ -23,7 +25,7 @@ The Performance Analyser is a tool designed to provide campaign insights for a c
 
   
 
-### **2\. Getting Started**
+### 2\. Getting Started
 
 Once you're logged in, click on the "Performance Analyser" card within the dashboard.
 
@@ -62,7 +64,7 @@ This feature allows you to filter the data displayed by specific brands and camp
 
   
 
-#### **Feature 2: Time Frame Adjustment**
+#### Feature 2: Time Frame Adjustment
 
 This feature allows you to adjust the time frame for the data displayed.
 
@@ -86,7 +88,7 @@ This feature allows you to adjust the time frame for the data displayed.
 
   
 
-#### **Feature 3: Platform and Post Type Filtering**
+#### Feature 3: Platform and Post Type Filtering
 
 This feature allows you to filter the data by platform (e.g., Instagram, TikTok) and post type (e.g., Reels, Posts).
 
@@ -113,7 +115,7 @@ This feature allows you to filter the data by platform (e.g., Instagram, TikTok)
 
   
 
-#### **Feature 4: Custom Graph Creation**
+#### Feature 4: Custom Graph Creation
 
 This feature allows you to create custom graphs to compare different metrics, such as CPA against engagement rate.
 
@@ -141,7 +143,7 @@ This feature allows you to create custom graphs to compare different metrics, su
 
   
 
-### **3\. Example Scenarios**
+### 3\. Example Scenarios
 
 #### **Scenario 1: Analyzing Influencer Performance for a Specific Campaign:**
 
@@ -162,22 +164,23 @@ This feature allows you to create custom graphs to compare different metrics, su
 ### **4\. Data Sensitivity & Margin Considerations**
 
 **Important****:** The Performance Analyser handles sensitive data, including influencer CPMs, CPAs, and engagement rates. This data is primarily for internal use.
-
+<Callout type="warning">
+  The Performance Analyser handles sensitive data, including influencer CPMs, CPAs, and engagement rates. This data is primarily for internal use. Please ensure you have correct margins applied to any charts or data that you may use or show to clients.
+</Callout>
   
 
 **Margin:** The default view displays data at a 0% margin.
-
   
 
 **Client Communication:** Be mindful of what information is shared with clients, especially in an undisclosed model where all data is based on internal costings without the correct margin applied. Always ensure the appropriate margin is applied before sharing costing data with clients.
 
   
-### **5\. Exporting charts and graphs**
-In order to export the charts and graphs from the performance analyser there are two requirements. A chrome extension that enables you to copy the SVG image of the chart and a design program to edit it. Our reccomendation is to use Figma as it makes it retains the proportions of the graph better than Adobe. 
+### 5\. Exporting charts and graphs
+In order to export the charts and graphs from the performance analyser there are two requirements. A chrome extension that enables you to copy the SVG image of the chart and a design program to edit it. Our reccomendation is to use Figma as it makes it retains the proportions of the graph better than Adobe and there is a free tier that allows you to use the app with limited artboards. 
 
-#### **Where to get the apps**
-You can download Figma from Kandji that should be available from your computer  
-The chrome extension required is
+#### Where to get the apps
+You can download Figma from Kandji that should be available from your computer [Figma on Kandji](kandji-self-service://library/items/20c3966d-fcbd-4ec3-9a7f-b041b2f453d4)
+The chrome extension required is [SVG 2 Clipboard](https://chromewebstore.google.com/detail/pacmblooebolmbakblffejfmhmnojece?utm_source=item-share-cb)
 
 Once you have these downlaoded and installed, navigate to the performance analyser and to the campaign or view you want the charts from.
 
@@ -187,7 +190,7 @@ In Figma create a new design document and paste the chart into the document. You
 
 **Video coming soon**
 
-### **6\. Troubleshooting & FAQs**
+### 6\. Troubleshooting & FAQs**
 
 **Q: Why is the data not updating after I select a brand and campaign?**
 
