--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,4 +1,5 @@
 import { prefix } from "../utils/prefix.js"
+import { Bleed } from 'nextra/components'
 
 # Ibex User Documentation
 
@@ -45,9 +46,9 @@ Whether you've spotted a small bug or have a major feature request, we welcome a
 
 [Request a new user to be added to the system](https://forms.clickup.com/2641216/f/2gka0-49832/PS30WJWPKI4QRPX59R)
 
-import { Bleed } from 'nextra/components'
+
  
-<Bleed>Report a bug in the system</Bleed>
+## Report a bug in the system
  
 <Bleed full>
   <iframe class="clickup-embed clickup-dynamic-height" src="https://forms.clickup.com/2641216/f/2gka0-50832/I0215TK4FVKHFKN5VE" onwheel="" width="100%" height="100%" style="background: transparent; border: 1px solid #ccc;"></iframe><script async src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"></script>
