performance analyser update

--- a/pages/PerformanceAnalyser.mdx
+++ b/pages/PerformanceAnalyser.mdx
@@ -39,7 +39,7 @@ Once you're logged in, click on the "Performance Analyser" card within the dashb
 
   
 
-#### **Feature 1: Campaign Code Filtering**
+#### Feature 1: Campaign Code Filtering
 
 This feature allows you to filter the data displayed by specific brands and campaigns.
 
@@ -145,7 +145,7 @@ This feature allows you to create custom graphs to compare different metrics, su
 
 ### 3\. Example Scenarios
 
-#### **Scenario 1: Analyzing Influencer Performance for a Specific Campaign:**
+#### Scenario 1: Analyzing Influencer Performance for a Specific Campaign:
 
 1. Select the relevant brand and campaign using the Campaign Code Filtering feature.
 2. Review the CPMs, CPAs, and engagement rates for each influencer.
@@ -153,7 +153,7 @@ This feature allows you to create custom graphs to compare different metrics, su
 
   
 
-#### **Scenario 2: Comparing Platform Performance:**
+#### Scenario 2: Comparing Platform Performance:
 
 1. Use the Platform and Post Type Filtering feature to compare the performance of different platforms (e.g., Instagram vs. TikTok).
 2. Analyze the CPMs, CPAs, and engagement rates for each platform.
@@ -161,11 +161,11 @@ This feature allows you to create custom graphs to compare different metrics, su
 
   
 
-### **4\. Data Sensitivity & Margin Considerations**
+### 4\. Data Sensitivity & Margin Considerations
 
-**Important****:** The Performance Analyser handles sensitive data, including influencer CPMs, CPAs, and engagement rates. This data is primarily for internal use.
+The Performance Analyser handles sensitive data, including influencer CPMs, CPAs, and engagement rates. This data is primarily for internal use.
 <Callout type="warning">
-  The Performance Analyser handles sensitive data, including influencer CPMs, CPAs, and engagement rates. This data is primarily for internal use. Please ensure you have correct margins applied to any charts or data that you may use or show to clients.
+  **Important:** The Performance Analyser handles sensitive data, including internal influencer and campaign cost pers. This data is for internal use without appropriate adjustments. Please ensure you have correct margins applied to any charts or data that you may use or show to clients.
 </Callout>
   
 
@@ -204,7 +204,7 @@ In Figma create a new design document and paste the chart into the document. You
 
   
 
-### **6\. Feedback & Future Development**
+### 6\. Feedback & Future Development
 
 The Performance Analyser is highly customizable. If there are any graphs or data points not currently accessible but needed, users can reach out to have those added, provided the data is in the system.
 
