--- a/pages/DeliverablesCalc.mdx
+++ b/pages/DeliverablesCalc.mdx
@@ -1,5 +1,5 @@
 ### Introduction
 
-Search, filter and access historical campaigns. 
+Generate deliverables for a campaign with the use of our benchmarks baked in!
 
-**Coming soon**
+**Docs coming soon**
