--- a/pages/PerformanceAnalyser.mdx
+++ b/pages/PerformanceAnalyser.mdx
@@ -47,8 +47,8 @@ This feature allows you to filter the data displayed by specific brands and camp
 
 **Steps:**
 
-1. In the "Brand" dropdown menu, select the desired brand. (Screenshot of the Brand dropdown)
-2. In the "Campaign" dropdown menu, select the desired campaign. (Screenshot of the Campaign dropdown)
+1. In the "Brand" dropdown menu, select the desired brand.
+2. In the "Campaign" dropdown menu, select the desired campaign. 
 3. The data will be updated to display only the influencers and metrics associated with the selected brand and campaign.
 
   
@@ -72,7 +72,7 @@ This feature allows you to adjust the time frame for the data displayed.
 
 **Steps:**
 
-1. Use the date picker to select a start date and end date. (Screenshot of the date picker)
+1. Use the date picker to select a start date and end date. 
 2. The data will be updated to display only the influencers and metrics within the selected time frame.
 
   
@@ -96,8 +96,8 @@ This feature allows you to filter the data by platform (e.g., Instagram, TikTok)
 
 **Steps:**
 
-1. In the "Platform" dropdown menu, select the desired platform. (Screenshot of the Platform dropdown)
-2. In the "Post Type" dropdown menu, select the desired post type. (Screenshot of the Post Type dropdown)
+1. In the "Platform" dropdown menu, select the desired platform. 
+2. In the "Post Type" dropdown menu, select the desired post type. 
 3. The data will be updated to display only the influencers and metrics for the selected platform and post type.
 
   
@@ -123,10 +123,10 @@ This feature allows you to create custom graphs to compare different metrics, su
 
 **Steps:** (Detailed steps will depend on the specific implementation of the graph creation feature)
 
-1. Click on the "Create Custom Graph" button. (Screenshot of the button)
-2. Select the metrics you want to compare from the available options. (Screenshot of the metric selection options)
-3. Customize the graph settings (e.g., chart type, axis labels). (Screenshot of the graph settings)
-4. Click "Generate Graph." (Screenshot of the button)
+1. Click on the "Create Custom Graph" button. 
+2. Select the metrics you want to compare from the available options.
+3. Customize the graph settings (e.g., chart type, axis labels). 
+4. Click "Generate Graph." 
 
   
 
