--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -47,8 +47,14 @@ Whether you've spotted a small bug or have a major feature request, we welcome a
 [Request a new user to be added to the system](https://forms.clickup.com/2641216/f/2gka0-49832/PS30WJWPKI4QRPX59R)
 
 <Bleed full>
-    ## Some title 
+    <iframe
+    src="https://forms.clickup.com/2641216/f/2gka0-50832/I0215TK4FVKHFKN5VE"
+    width="100%"
+    height="500px"
+    title="Bug Submission form"
+  />
 </Bleed>
+
 
 Whether you've spotted a small bug or have a major feature request, we welcome all feedback to help improve the platform.
 
