--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -53,6 +53,10 @@ Whether you've spotted a small bug or have a major feature request, we welcome a
     height="500px"
     title="Bug Submission form"
   />
+  <script 
+    async 
+    src="https://app-cdn.clickup.com/assets/js/forms-embed/v1.js"
+  />
 </Bleed>
 
 
